--- a/.github/workflows/markdown.yml
+++ b/.github/workflows/markdown.yml
@@ -2,16 +2,15 @@ name: Check Markdown links
 
 on:
   push:
-    branches: [ master, dev ]
+    branches: [master, dev]
   pull_request:
-    branches: [ master ]
 
 jobs:
   markdown-link-check:
     runs-on: ubuntu-latest
     steps:
-    # Sub repos will not be checked.
-    - uses: actions/checkout@master
-    - uses: gaurav-nelson/github-action-markdown-link-check@v1
-      with:
-        use-quiet-mode: 'yes'
+      # Sub repos will not be checked.
+      - uses: actions/checkout@master
+      - uses: gaurav-nelson/github-action-markdown-link-check@v1
+        with:
+          use-quiet-mode: "yes"
