--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,9 +17,11 @@ targets = ["x86_64-unknown-linux-gnu"]
 sp-core = {default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-09+1'}
 sp-runtime = {default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-09+1'}
 sp-std = {default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-09+1'}
+sp-io = {default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-09+1'}
 
 frame-support = {default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-09+1'}
 frame-system = {default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-09+1'}
+frame-benchmarking = {default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-09+1', optional=true}
 
 pallet-balances = {default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-09+1'}
 pallet-timestamp = {default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-09+1'}
@@ -28,21 +30,24 @@ codec = {package = "parity-scale-codec", version = "2.0.0", default-features = f
 
 [dev-dependencies]
 sp-io = {default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-09+1'}
+sp-runtime = {default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-09+1'}
+
 
 [features]
 default = ["std"]
 # Used for testing only.
 expose_privates = []
-# Benchmarks are currently not supported.
-runtime-benchmarks = []
-
+# Enable Benchmarks.
+runtime-benchmarks = ['frame-benchmarking']
 std = [
   "codec/std",
   "sp-std/std",
   "sp-io/std",
   "sp-runtime/std",
+  "frame-benchmarking/std",
   "frame-support/std",
   "frame-system/std",
   "pallet-balances/std",
   "pallet-timestamp/std",
 ]
+try-runtime = ['frame-support/try-runtime']
