--- a/.github/workflows/markdown.yml
+++ b/.github/workflows/markdown.yml
@@ -2,7 +2,7 @@ name: Check Markdown links
 
 on:
   push:
-    branches: [ master, dev ]
+    branches: [ master ]
   pull_request:
     branches: [ master ]
 
