--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ pallet-balances = {default-features = false, version = '4.0.0-dev', git = 'https
 pallet-timestamp = {default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-09+1'}
 
 codec = {package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"]}
+syn = "=1.0.97"
 
 [dev-dependencies]
 sp-io = {default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-09+1'}
